Fix assert with new animator codepaths

Task-number: QTBUG-56572
Change-Id: Ia2dd03d4e1b372b8d9ed0fd5e17683f63bde8534
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>